# qjackcapture

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
locale/: qjackcapture.pro  qjackcapture_en.ts  qjackcapture_fr.ts
qjackcapture/: app.py  nsmclient.py  userdirs.py
resources/: qjackcapture.pro  resources.qrc
resources/locale/: qjackcapture_en.ts  qjackcapture_fr.ts
resources/ui/: mainwindow.ui  outputhelpwin.ui  prefixhelpwin.ui  sourceshelpwin.ui
resources/xdg/: qjackcapture.desktop
