[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true


[tool.black]
line-length = 99
target-version = ['py36', 'py37', 'py38']
force-exclude = 'qjackcapture/(.*_rc|ui.*)\.py'
